- Changed some styling in sidebar and some z-index related bugs - fixed bug where navigation back to jobs page happened even if you cancelled confirm popup when deleting from a job view page

--- a/Frontend/src/Sass/Components/_modal.scss
+++ b/Frontend/src/Sass/Components/_modal.scss
@@ -17,7 +17,7 @@
 
 .overlay {
   position: fixed; /* Stay in place */
-  z-index: 20; /* Sit on top */
+  z-index: 999; /* Sit on top */
   left: 0;
   top: 0;
   width: 100%; /* Full width */
