--- a/Frontend/src/Sass/_elements.scss
+++ b/Frontend/src/Sass/_elements.scss
@@ -126,7 +126,7 @@ li {
   &.sidebarBtn {
     margin: 1rem;
     position: fixed;
-    z-index: 10;
+    z-index: 30;
     font-size: 2rem;
 
     &.left {
